# zvec

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  pyproject.toml
.github/workflows/: 01-ci-pipeline.yml  03-macos-linux-build.yml  android_build.yml  build_test_wheel.yml  continuous_bench.yml  linux_arm64_docker_ci.yml  linux_x64_docker_ci.yml  mac_arm64_ci.yml  main.yml  nightly_coverage.yml
cmake/: bazel.cmake  option.cmake  rpm_install.cmake
examples/: CMakeLists.txt
examples/c++/db/: main.cc
examples/c_api/: CMakeLists.txt  basic_example.c  collection_schema_example.c  doc_example.c  field_schema_example.c  index_example.c  optimized_example.c
python/tests/: test_hnsw_contiguous_memory.py  test_vamana.py
python/tests/detail/: distance_helper.py  doc_helper.py  fixture_helper.py  test_collection_crash_recovery_addcolumn.py  test_collection_crash_recovery_altercolumn.py  test_collection_crash_recovery_createindex.py  test_collection_crash_recovery_deletedoc.py  test_collection_crash_recovery_deleteindex.py  test_collection_crash_recovery_dropcolumn.py  test_collection_crash_recovery_insertdoc.py  test_collection_crash_recovery_updatecolumn.py  test_collection_crash_recovery_updatedoc.py  test_collection_crash_recovery_upsertdoc.py  test_collection_dml.py  test_collection_dql.py  test_collection_recall.py
python/zvec/: __init__.py  __init__.pyi
python/zvec/extension/: __init__.py
python/zvec/model/: collection.py
python/zvec/model/param/: __init__.py  __init__.pyi
src/: CMakeLists.txt
src/ailego/: CMakeLists.txt
src/ailego/algorithm/: lloyd_cluster.h
src/ailego/buffer/: buffer_pool.cc
src/ailego/math/: distance_matrix_euclidean_utility.i  distance_matrix_inner_product_utility.i  euclidean_distance_matrix.h  euclidean_distance_matrix_fp16_avx.cc  euclidean_distance_matrix_fp16_avx512.cc  euclidean_distance_matrix_fp16_dispatch.cc  euclidean_distance_matrix_fp16_neon.cc  euclidean_distance_matrix_fp32_avx.cc  euclidean_distance_matrix_fp32_avx512.cc  euclidean_distance_matrix_fp32_dispatch.cc  euclidean_distance_matrix_fp32_neon.cc  euclidean_distance_matrix_fp32_sse.cc  euclidean_distance_matrix_int4_avx2.cc  euclidean_distance_matrix_int4_dispatch.cc  euclidean_distance_matrix_int4_sse.cc  euclidean_distance_matrix_int8_avx2.cc  euclidean_distance_matrix_int8_dispatch.cc  euclidean_distance_matrix_int8_sse.cc  inner_product_matrix.h  inner_product_matrix_fp16_avx.cc  inner_product_matrix_fp16_avx512.cc  inner_product_matrix_fp16_dispatch.cc  inner_product_matrix_fp16_neon.cc  inner_product_matrix_fp32.cc  inner_product_matrix_fp32_avx.cc  inner_product_matrix_fp32_avx512.cc  inner_product_matrix_fp32_dispatch.cc  inner_product_matrix_fp32_neon.cc  inner_product_matrix_fp32_sse.cc  inner_product_matrix_int4_avx2.cc  inner_product_matrix_int4_dispatch.cc  inner_product_matrix_int4_sse.cc  inner_product_matrix_int8_avx2.cc  inner_product_matrix_int8_dispatch.cc  inner_product_matrix_int8_sse.cc  mips_euclidean_distance_matrix.h  mips_euclidean_distance_matrix_fp16_avx.cc  mips_euclidean_distance_matrix_fp16_avx512.cc  mips_euclidean_distance_matrix_fp16_dispatch.cc  mips_euclidean_distance_matrix_fp16_neon.cc  (+13 more)
src/ailego/math_batch/: distance_batch_math.h  euclidean_distance_batch.h  inner_product_distance_batch.h  inner_product_distance_batch_dispatch.cc  inner_product_distance_batch_impl.h  inner_product_distance_batch_impl_fp16.h  inner_product_distance_batch_impl_fp16_avx2.cc  inner_product_distance_batch_impl_fp16_avx512.cc  inner_product_distance_batch_impl_fp32_avx2.cc  inner_product_distance_batch_impl_int8.h  inner_product_distance_batch_impl_int8_avx2.cc  inner_product_distance_batch_impl_int8_avx512.cc
src/binding/c/: CMakeLists.txt  c_api.cc
src/binding/python/: CMakeLists.txt
src/binding/python/model/: python_collection.cc
src/binding/python/model/param/: python_param.cc
src/c_api/: CMakeLists.txt  c_api.cc
src/core/: CMakeLists.txt
src/core/algorithm/: CMakeLists.txt
src/core/algorithm/flat/: flat_searcher.h  flat_streamer_context.h
src/core/algorithm/hnsw/: hnsw_algorithm.cc  hnsw_algorithm.h  hnsw_chunk.h  hnsw_entity.cc  hnsw_entity.h  hnsw_params.h  hnsw_streamer.cc  hnsw_streamer_entity.cc  hnsw_streamer_entity.h
src/core/algorithm/hnsw-rabitq/: hnsw_rabitq_builder.cc  hnsw_rabitq_streamer.cc
src/core/algorithm/hnsw_rabitq/: CMakeLists.txt  hnsw_rabitq_algorithm.cc  hnsw_rabitq_algorithm.h  hnsw_rabitq_builder.cc  hnsw_rabitq_builder.h  hnsw_rabitq_builder_entity.cc  hnsw_rabitq_builder_entity.h  hnsw_rabitq_chunk.cc  hnsw_rabitq_chunk.h  hnsw_rabitq_context.cc  hnsw_rabitq_context.h  hnsw_rabitq_dist_calculator.h  hnsw_rabitq_entity.cc  hnsw_rabitq_entity.h  hnsw_rabitq_index_hash.h  hnsw_rabitq_index_provider.h  hnsw_rabitq_query_algorithm.cc  (+15 more)
src/core/interface/: index.cc  index_factory.cc  index_param.cc
src/core/utility/: buffer_storage.cc  utility_params.h
src/db/: CMakeLists.txt  collection.cc
src/db/common/: constants.h
src/db/index/: CMakeLists.txt
src/db/proto/: zvec.proto
src/include/zvec/: c_api.h
tests/: CMakeLists.txt
tests/ailego/: CMakeLists.txt
tests/ailego/math/: euclidean_distance_matrix_fp16_test.cc  hamming_distance_matrix_test.cc  mips_euclidean_distance_matrix_fp16_test.cc  mips_euclidean_distance_matrix_int4_test.cc  mips_euclidean_distance_matrix_int8_test.cc
tests/ailego/parallel/: multi_thread_list_test.cc
tests/c/: c_api_test.c  utils.c
tests/c_api/: CMakeLists.txt  c_api_test.c  utils.c  utils.h
tests/core/algorithm/: CMakeLists.txt
tests/core/interface/: CMakeLists.txt  index_interface_test.cc
tests/core/metric/: quantized_integer_metric_test.cc
tests/core/utility/: CMakeLists.txt  buffer_storage_test.cpp
tests/db/: CMakeLists.txt  collection_test.cc
tests/db/crash_recovery/: CMakeLists.txt  data_generator.cc  sample_test.cc  utility.h  write_recovery_test.cc
tests/db/index/: CMakeLists.txt
tests/db/sqlengine/: CMakeLists.txt
tools/: CMakeLists.txt
tools/core/: CMakeLists.txt  local_builder.cc  local_builder_original.cc
(+57 files in other folders)
